--- a/index.html
+++ b/index.html
@@ -3,77 +3,79 @@
 <head>
 	<!-- Configurações de comportamento da pagina-->
 	<meta charset="utf-8"/>
-	<title></title>
-    <style>
-	/*Configurações de estilo "CSS"*/
-		
-		
-    </style>
+	<meta name="author" content="Uelton lima">
+	<link rel="stylesheet" href="css/estilo.css">
+	<title>Google Glass</title>
 </head>
 <body>
 	<div id="interface">
-    <header>
+		<header id="cabecalho">
+			<hgroup>
+				<h1>Google Glass</h1>
+				<h2>A revolução do Google está chegando</h2>
+			</hgroup>
+			<figure>
+				<img id="icone" src="imagens/glass-oculos-preto-peq.png" alt="glass-oculos-preto-peq">
+			</figure>
+			<nav id="menu">
+				<h2>Menu Principal</h2>
+				<ul>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="specs.html">Especificações</a></li>
+					<li><a href="fotos.html">Fotos</a></li>
+					<li><a href="multimidia.html">Multimídia</a></li>
+					<li><a href="fale-conosco.html">Fale conosco</a></li>
+				</ul>
+			</nav>
+		</header>
 		<hgroup>
-			<h1>Google Glass</h1>
-			<h2>A revolução do Google está chegando</h2>
+			<h4>Tecnologia > Inovações</h4>
+			<h2>Saiba tudo sobre o Google Glass</h2>
+			<h3>por Gustavo Guanabara</h3>
+			<h4>Atualizado em 23/Abril/2013</h4>
 		</hgroup>
-		<img src="imagens/glass-oculos-preto-peq.png">
 
-Menu Principal
-- Home
-- Especificações
-- Fotos
-- Multimídia
-- Fale conosco
-	</header>
-<hgroup>
-	<h3>Tecnologia > Inovações</h3>
-	<h1>Saiba tudo sobre o Google Glass</h1>
-	<h2>por Gustavo Guanabara</h2>
-	<h3>Atualizado em 23/Abril/2013</h3>
-</hgroup>
+		<h2 style="text-align:center">O que é</h2>
+		<p>O <span style="font-weight:bolder">Google Glass</span> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de Project Glass, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeo&shy;conferê&shy;ncias. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o <a href="http://glass.google.com" target="_blank">Google Glass</a> encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
+		<figure class="fotoLegenda">
+			<img src="imagens/glass-quadro-homem-mulher.jpg" alt="glass-quadro-homem-mulher">
+			<figcaption>
+				<h2>Google Glass</h2>
+				<p> Uma nova maneira de ver o mundo</p>
+			</figcaption>
+		</figure>
 
-<h2 style="text-align:center">O que é</h2>
-<p>O <span style="font-weight:bolder">Google Glass</span> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de Project Glass, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeo&shy;conferê&shy;ncias. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o <em>Google Glass</em> encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
-<figure>
-	<img src="imagens/glass-quadro-homem-mulher.jpg">
-	<figcaption>
-		<h4>Google Glass</h4>
-		<p> Uma nova maneira de ver o mundo</p>
-	</figcaption>
-</figure>
+		<h2>Data de lançamento</h2>
+		<p>Não há uma data específica e oficial para o dispositivo ser lançado, ainda. Pode ser que ele esteja disponível em demonstrações a partir de 2013, mas seu lançamento para as lojas fica para, pelo menos, 2014.</p>
 
-<h2>Data de lançamento</h2>
-<p>Não há uma data específica e oficial para o dispositivo ser lançado, ainda. Pode ser que ele esteja disponível em demonstrações a partir de 2013, mas seu lançamento para as lojas fica para, pelo menos, 2014.</p>
+		<h2>Especificações Técnicas</h2>
+		Tabela Técnica do Google Glass Mar/2013
 
-<h2>Especificações Técnicas</h2>
-Tabela Técnica do Google Glass Mar/2013
+		Tela:Resolução equivalente a tela de 25"
+		Camera: 5MP para fotos / 720p para vídeos
+		Conectividade: Wi-Fi/ Bluetooth
+		Memória Interna: 12GB
 
-Tela:Resolução equivalente a tela de 25"
-Camera: 5MP para fotos / 720p para vídeos
-Conectividade: Wi-Fi/ Bluetooth
-Memória Interna: 12GB
+		<h2>Como funciona</h2>
+		<p>De acordo com fontes próximas do Google, os óculos vão contar com uma pequena tela de LCD ou AMOLED na parte superior e em frente aos olhos do usuário. Com o uso de uma câmera e GPS, você pode se situar, assim como selecionar opções com o movimento da cabeça.</p>
 
-<h2>Como funciona</h2>
-<p>De acordo com fontes próximas do Google, os óculos vão contar com uma pequena tela de LCD ou AMOLED na parte superior e em frente aos olhos do usuário. Com o uso de uma câmera e GPS, você pode se situar, assim como selecionar opções com o movimento da cabeça.</p>
+		<h2>O que você pode fazer com o Google Glasses</h2>
+		<p>O vídeo de divulgação do Google mostra que você pode se transformar em uma espécie de “super-humano”, já que o aparelho pode indicar a quantos metros você está de seu destino, se o metrô está aberto ou fechado, mostrar o clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.</p>
 
-<h2>O que você pode fazer com o Google Glasses</h2>
-<p>O vídeo de divulgação do Google mostra que você pode se transformar em uma espécie de “super-humano”, já que o aparelho pode indicar a quantos metros você está de seu destino, se o metrô está aberto ou fechado, mostrar o clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.</p>
+		[AQUI ENTRA UM VÍDEO]
 
-[AQUI ENTRA UM VÍDEO]
+		<h2>Outras Notícias</h2>
+		Vídeo mais recente
 
-<h2>Outras Notícias</h2>
-Vídeo mais recente
+		[AQUI ENTRA UM VÍDEO]
 
-[AQUI ENTRA UM VÍDEO]
+		<h2>Novidades no Glass</h2>
+		<p>O Google enfim revelou as especificações completas do Google Glass, e com ele uma surpresa ainda inédita no mercado: a gigante das buscas usará um sistema de áudio baseado na transdução por condução. Através das hastes dos óculos, o som será transmitido para o ouvido do usuário por meio de microvibrações em determinados ossos de sua cabeça, sem usar nenhum tipo de alto-falante.</p>
 
-<h2>Novidades no Glass</h2>
-<p>O Google enfim revelou as especificações completas do Google Glass, e com ele uma surpresa ainda inédita no mercado: a gigante das buscas usará um sistema de áudio baseado na transdução por condução. Através das hastes dos óculos, o som será transmitido para o ouvido do usuário por meio de microvibrações em determinados ossos de sua cabeça, sem usar nenhum tipo de alto-falante.</p>
+		<p>Além da surpresa do áudio, a tela montada a frente do olho do usuário também chamou atenção. Serão 640 x 360 pixels de resolução que, em proporção, equivaleria a um monitor de 25 polegadas de alta definição colocado a 2,5 metros de distância do espectador.</p>
 
-<p>Além da surpresa do áudio, a tela montada a frente do olho do usuário também chamou atenção. Serão 640 x 360 pixels de resolução que, em proporção, equivaleria a um monitor de 25 polegadas de alta definição colocado a 2,5 metros de distância do espectador.</p>
-
-<p>Copyright 2013 - by Gustavo Guanabara
-Facebook | Twitter</p>
-</div>
+		<p>Copyright 2013 - by Gustavo Guanabara
+		Facebook | Twitter</p>
+	</div>
 </body>
 </html>
