--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -16,16 +16,16 @@
                 <h3>A revolução do Google está chegando</h3>
             </hgroup>
             <figure>
-                <img id="icone" src="imagens/glass-oculos-preto-peq.png" alt="glass-oculos-preto-peq"/>
+                <img id="icone" src="imagens/contato.png" alt="contato"/>
             </figure>
             <nav id="menu">
                 <h3>Menu Principal</h3>
                 <ul>
-                    <li onmouseover="mudafoto('imagens/home.png')" onmouseout="mudafoto('imagens/glass-oculos-preto-peq.png')"><a href="index.html">Home</a></li>
-                    <li onmouseover="mudafoto('imagens/especificacoes.png')" onmouseout="mudafoto('imagens/glass-oculos-preto-peq.png')"><a href="specs.html">Especificações</a></li>
-                    <li onmouseover="mudafoto('imagens/fotos.png')" onmouseout="mudafoto('imagens/glass-oculos-preto-peq.png')"><a href="fotos.html">Fotos</a></li>
-                    <li onmouseover="mudafoto('imagens/multimidia.png')" onmouseout="mudafoto('imagens/glass-oculos-preto-peq.png')"><a href="multimidia.html">Multimídia</a></li>
-                    <li onmouseover="mudafoto('imagens/contato.png')" onmouseout="mudafoto('imagens/glass-oculos-preto-peq.png')"><a href="fale-conosco.html">Fale conosco</a></li>
+                    <li onmouseover="mudafoto('imagens/home.png')" onmouseout="mudafoto('imagens/contato.png')"><a href="index.html">Home</a></li>
+                    <li onmouseover="mudafoto('imagens/especificacoes.png')" onmouseout="mudafoto('imagens/contato.png')"><a href="specs.html">Especificações</a></li>
+                    <li onmouseover="mudafoto('imagens/fotos.png')" onmouseout="mudafoto('imagens/contato.png')"><a href="fotos.html">Fotos</a></li>
+                    <li onmouseover="mudafoto('imagens/multimidia.png')" onmouseout="mudafoto('imagens/contato.png')"><a href="multimidia.html">Multimídia</a></li>
+                    <li onmouseover="mudafoto('imagens/contato.png')" onmouseout="mudafoto('imagens/contato.png')"><a href="fale-conosco.html">Fale conosco</a></li>
                 </ul>
             </nav>
         </header>
