--- a/index.html
+++ b/index.html
@@ -1,112 +1,123 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-	<!-- Configurações de comportamento da pagina-->
-	<meta charset="utf-8"/>
-	<meta name="author" content="Uelton lima">
-	<link rel="stylesheet" href="css/estilo.css">
-	<title>Google Glass</title>
-	<script src="javascript/funcoes.js"></script>
-</head>
-<body>
-	<div id="interface">
-		<header id="cabecalho">
-			<hgroup>
-				<h1>Google Glass</h1>
-				<h3>A revolução do Google está chegando</h3>
-			</hgroup>
-			<figure>
-				<img id="icone" src="imagens/glass-oculos-preto-peq.png" alt="glass-oculos-preto-peq"/>
-			</figure>
-			<nav id="menu">
-				<h3>Menu Principal</h3>
-				<ul>
-					<li onmouseover="mudafoto('imagens/home.png')" onmouseout="mudafoto('imagens/glass-oculos-preto-peq.png')"><a href="index.html">Home</a></li>
-					<li onmouseover="mudafoto('imagens/especificacoes.png')" onmouseout="mudafoto('imagens/glass-oculos-preto-peq.png')"><a href="specs.html">Especificações</a></li>
-					<li onmouseover="mudafoto('imagens/fotos.png')" onmouseout="mudafoto('imagens/glass-oculos-preto-peq.png')"><a href="fotos.html">Fotos</a></li>
-					<li onmouseover="mudafoto('imagens/multimidia.png')" onmouseout="mudafoto('imagens/glass-oculos-preto-peq.png')"><a href="multimidia.html">Multimídia</a></li>
-					<li onmouseover="mudafoto('imagens/contato.png')" onmouseout="mudafoto('imagens/glass-oculos-preto-peq.png')"><a href="fale-conosco.html">Fale conosco</a></li>
-				</ul>
-			</nav>
-		</header>
-		<section id="corpo">
-			<article id="noticiaPrincipal">
-				<header id="cabecalhoArtigo">
-					<hgroup>
-						<h4>Tecnologia > Inovações</h4>
-						<h2>Saiba tudo sobre o Google Glass</h2>
-						<h3>por Uelton Lima</h3>
-						<h4 class="direita">Atualizado em 23/Abril/2013</h4>
-					</hgroup>
-				</header>
-
-				<h3 style="text-align:center">O que é</h3>
-				<p>O <span style="font-weight:bolder">Google Glass</span> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de Project Glass, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeo&shy;conferê&shy;ncias. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o <a href="http://glass.google.com" target="_blank">Google Glass</a> encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
-				<figure class="fotoLegenda">
-					<img src="imagens/glass-quadro-homem-mulher.jpg" alt="glass-quadro-homem-mulher">
-					<figcaption>
-						<h4>Google Glass</h4>
-						<p> Uma nova maneira de ver o mundo</p>
-					</figcaption>
+	<head>
+		<!-- Configurações de comportamento da pagina-->
+		<meta charset="utf-8"/>
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="keywords" content="Google, Glass, Especificações, GPS, Óculos, Tecnologia" />
+		<meta name="description" content="a revolução do Google Glass para otimizar nossa vida." />
+		<meta name="author" content="Uelton lima" />
+		<link rel="stylesheet" href="css/estilo.css" />
+		<script src="javascript/funcoes.js"></script>
+		<title>Google Glass</title>
+	</head>
+	<body>
+		<div id="interface">
+			<header id="cabecalho">
+				<hgroup>
+					<h1>Google Glass</h1>
+					<h3>A revolução do Google está chegando</h3>
+				</hgroup>
+				<figure>
+					<img id="icone" src="imagens/glass-oculos-preto-peq.png" alt="glass-oculos-preto-peq"/>
 				</figure>
+				<nav id="menu">
+					<h3>Menu Principal</h3>
+					<ul>
+						<li onmouseover="mudafoto('imagens/home.png')" onmouseout="mudafoto('imagens/glass-oculos-preto-peq.png')"><a href="index.html">Home</a></li>
+						<li onmouseover="mudafoto('imagens/especificacoes.png')" onmouseout="mudafoto('imagens/glass-oculos-preto-peq.png')"><a href="specs.html">Especificações</a></li>
+						<li onmouseover="mudafoto('imagens/fotos.png')" onmouseout="mudafoto('imagens/glass-oculos-preto-peq.png')"><a href="fotos.html">Fotos</a></li>
+						<li onmouseover="mudafoto('imagens/multimidia.png')" onmouseout="mudafoto('imagens/glass-oculos-preto-peq.png')"><a href="multimidia.html">Multimídia</a></li>
+						<li onmouseover="mudafoto('imagens/contato.png')" onmouseout="mudafoto('imagens/glass-oculos-preto-peq.png')"><a href="fale-conosco.html">Fale conosco</a></li>
+					</ul>
+				</nav>
+			</header>
+			<section id="corpo">
+				<article id="noticiaPrincipal">
+					<header id="cabecalhoArtigo">
+						<hgroup>
+							<h4>Tecnologia > Inovações</h4>
+							<h2>Saiba tudo sobre o Google Glass</h2>
+							<h3>por Uelton Lima</h3>
+							<h4 class="direita">Atualizado em 23/Abril/2013</h4>
+						</hgroup>
+					</header>
+					<h3 style="text-align:center">O que é</h3>
+					<p>O <a href="http://glass.google.com" target="_blank" style="font-weight:bolder">Google Glass</a> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de Project Glass, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeo&shy;conferê&shy;ncias. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o <a href="http://glass.google.com" target="_blank">Google Glass</a> encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
+					<figure class="fotoLegenda">
+						<img src="imagens/glass-quadro-homem-mulher.jpg" alt="glass-quadro-homem-mulher">
+						<figcaption>
+							<h4>Google Glass</h4>
+							<p> Uma nova maneira de ver o mundo</p>
+						</figcaption>
+					</figure>
+					<h3>Data de lançamento</h3>
+					<p>Não há uma data específica e oficial para o dispositivo ser lançado, ainda. Pode ser que ele esteja disponível em demonstrações a partir de 2013, mas seu lançamento para as lojas fica para, pelo menos, 2014.</p>
+					<h3>Especificações Técnicas</h3>
+					<table id="tabelaspec">
+						<caption>Tabela Técnica do Google Glass <span>Mar/2013</span></caption>
+						<tr>
+							<td class="classeEsquerda">Tela</td>
+							<td class="classeDireita">Resolução equivalente a tela de 25"</td>
+						</tr>
+						<tr>
+							<td rowspan="2" class="classeEsquerda">Camera</td>
+							<td class="classeDireita">5MP para fotos</td>
+						</tr>
+						<tr>
+							<td class="classeDireita">720p para vídeos</td>
+						</tr>
+						<tr>
+							<td rowspan="2" class="classeEsquerda">Conectividade</td>
+							<td class="classeDireita">Wi-Fi</td>
+						</tr>
+						<tr>
+							<td class="classeDireita">Bluetooth</td>
+						</tr>
+						<tr>
+							<td class="classeEsquerda">Memória Interna</td>
+							<td class="classeDireita">12GB</td>
+						</tr>
+					</table>
+					<h3>Como funciona</h3>
+					<p>De acordo com fontes próximas do Google, os óculos vão contar com uma pequena tela de LCD ou AMOLED na parte superior e em frente aos olhos do usuário. Com o uso de uma câmera e GPS, você pode se situar, assim como selecionar opções com o movimento da cabeça.</p>
 
-				<h3>Data de lançamento</h3>
-				<p>Não há uma data específica e oficial para o dispositivo ser lançado, ainda. Pode ser que ele esteja disponível em demonstrações a partir de 2013, mas seu lançamento para as lojas fica para, pelo menos, 2014.</p>
+					<h3>O que você pode fazer com o Google Glasses</h3>
+					<p>O vídeo de divulgação do Google mostra que você pode se transformar em uma espécie de “super-humano”, já que o aparelho pode indicar a quantos metros você está de seu destino, se o metrô está aberto ou fechado, mostrar o clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.</p>
+					<div id="tvAudio">
+						<video id="filme01" controls="controls" poster="imagens/video-mini01.jpg">
+							<source src="media/getting-started.mp4" type="video/mp4" />
+							<source src="media/getting-started.webm" type="video/webm" />
+							<source src="media/getting-started.ogg" type="video/ogg" />
+							Desculpe, mas não foi possível carregar o vídeo!
+						</video>
+					</div>
+				</article>
+			</section>
+			<aside id="lateral">
+				<h2>Outras Notícias</h2>
+				<h3>Vídeo mais recente</h3>
 
-				<h3>Especificações Técnicas</h3>
-				<table id="tabelaspec">
-					<caption>Tabela Técnica do Google Glass <span>Mar/2013</span></caption>
+				<div id="tvaudio">
+					<video id="filme02" controls="controls" poster="imagens/video-mini02.jpg">
+						<source src="media/how-it-feels.mp4" type="video/mp4" />
+						<source src="media/how-it-feels.webm" type="video/webm" />
+						<source src="media/how-it-feels.ogg" type="video/ogg" />
+						Desculpe, mas não foi possível carregar o vídeo!
+						<source>
+					</video>
+				</div>
 
-					<tr>
-						<td class="classeEsquerda">Tela</td>
-						<td class="classeDireita">Resolução equivalente a tela de 25"</td>
-					</tr>
-					<tr>
-						<td rowspan="2" class="classeEsquerda">Camera</td>
-						<td class="classeDireita">5MP para fotos</td>
-					</tr>
-					<tr>
-						<td class="classeDireita">720p para vídeos</td>
-					</tr>
-					<tr>
-						<td rowspan="2" class="classeEsquerda">Conectividade</td>
-						<td class="classeDireita">Wi-Fi</td>
-					</tr>
-					<tr>
-						<td class="classeDireita">Bluetooth</td>
-					</tr>
-					<tr>
-						<td class="classeEsquerda">Memória Interna</td>
-						<td class="classeDireita">12GB</td>
-					</tr>
-				</table>
-				<h3>Como funciona</h3>
-				<p>De acordo com fontes próximas do Google, os óculos vão contar com uma pequena tela de LCD ou AMOLED na parte superior e em frente aos olhos do usuário. Com o uso de uma câmera e GPS, você pode se situar, assim como selecionar opções com o movimento da cabeça.</p>
-
-				<h3>O que você pode fazer com o Google Glasses</h3>
-				<p>O vídeo de divulgação do Google mostra que você pode se transformar em uma espécie de “super-humano”, já que o aparelho pode indicar a quantos metros você está de seu destino, se o metrô está aberto ou fechado, mostrar o clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.</p>
-
-				[AQUI ENTRA UM VÍDEO]
-			</article>
-		</section>
-		<aside id="lateral">
-
-			<h2>Outras Notícias</h2>
-			<h3>Vídeo mais recente</h3>
-
-			[AQUI ENTRA UM VÍDEO]
-
-			<h3>Novidades no Glass</h3>
-			<p>O Google enfim revelou as especificações completas do Google Glass, e com ele uma surpresa ainda inédita no mercado: a gigante das buscas usará um sistema de áudio baseado na transdução por condução. Através das hastes dos óculos, o som será transmitido para o ouvido do usuário por meio de microvibrações em determinados ossos de sua cabeça, sem usar nenhum tipo de alto-falante.</p>
-
-			<p>Além da surpresa do áudio, a tela montada a frente do olho do usuário também chamou atenção. Serão 640 x 360 pixels de resolução que, em proporção, equivaleria a um monitor de 25 polegadas de alta definição colocado a 2,5 metros de distância do espectador.</p>
-		</aside>
-		<footer id="rodape">
-
-			<p>Copyright 2013 - by Uelton Lima <br/>
+				<h3>Novidades no Glass</h3>
+				<p>O Google enfim revelou as especificações completas do Google Glass, e com ele uma surpresa ainda inédita no mercado: a gigante das buscas usará um sistema de áudio baseado na transdução por condução. Através das hastes dos óculos, o som será transmitido para o ouvido do usuário por meio de microvibrações em determinados ossos de sua cabeça, sem usar nenhum tipo de alto-falante.</p>
+				<p>Além da surpresa do áudio, a tela montada a frente do olho do usuário também chamou atenção. Serão 640 x 360 pixels de resolução que, em proporção, equivaleria a um monitor de 25 polegadas de alta definição colocado a 2,5 metros de distância do espectador.</p>
+			</aside>
+			<footer id="rodape">
+				<p>Copyright 2013 - by Uelton Lima <br/>
 				<a href="https://facebook.com/uelton.17" target="_blank">Facebook</a> |
 				<a href="https://twitter.com/UeltonSL" target="_blank"> Twitter</a></p>
 			</footer>
 		</div>
 	</body>
-	</html>
+</html>
