--- a/specs.html
+++ b/specs.html
@@ -1,49 +1,70 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-	<!-- Configurações de comportamento da pagina-->
-	<meta charset="utf-8"/>
-	<meta name="author" content="Uelton lima">
-	<link rel="stylesheet" href="css/estilo.css">
-	<title>Google Glass</title>
-	<script src="javascript/funcoes.js"></script>
-</head>
-<body>
-	<div id="interface">
-		<header id="cabecalho">
-			<hgroup>
-				<h1>Google Glass</h1>
-				<h3>A revolução do Google está chegando</h3>
-			</hgroup>
-			<figure>
-				<img id="icone" src="imagens/especificacoes.png" alt="especificacoes"/>
-			</figure>
-			<nav id="menu">
-				<h3>Menu Principal</h3>
-				<ul>
-					<li onmouseover="mudafoto('imagens/home.png')" onmouseout="mudafoto('imagens/especificacoes.png')"><a href="index.html">Home</a></li>
-					<li onmouseover="mudafoto('imagens/especificacoes.png')" onmouseout="mudafoto('imagens/especificacoes.png')"><a href="specs.html">Especificações</a></li>
-					<li onmouseover="mudafoto('imagens/fotos.png')" onmouseout="mudafoto('imagens/especificacoes.png')"><a href="fotos.html">Fotos</a></li>
-					<li onmouseover="mudafoto('imagens/multimidia.png')" onmouseout="mudafoto('imagens/especificacoes.png')"><a href="multimidia.html">Multimídia</a></li>
-					<li onmouseover="mudafoto('imagens/contato.png')" onmouseout="mudafoto('imagens/especificacoes.png')"><a href="fale-conosco.html">Fale conosco</a></li>
-				</ul>
-			</nav>
-		</header>
-Glass > Especificações
-Raio-X no Google Glass
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
-
-Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.
-
-[AQUI ENTRA UMA IMAGEM]
-
-<footer id="rodape">
-
-			<p>Copyright 2013 - by Uelton Lima <br/>
+	<head>	
+		<!-- Configurações de comportamento da pagina-->
+		<meta charset="utf-8"/>
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="keywords" content="Google, Glass, Especificações, GPS, Óculos, Tecnologia" />
+		<meta name="description" content="a revolução do Google Glass para otimizar nossa vida." />
+		<meta name="author" content="Uelton lima" />
+		<link rel="stylesheet" href="css/estilo.css">
+		<link rel="stylesheet" type="text/css" href="css/specs.css" />
+		<script src="javascript/funcoes.js"></script>
+		<title>Google Glass</title>
+	</head>
+	<body>
+		<div id="interface">
+			<header id="cabecalho">
+				<hgroup>
+					<h1>Google Glass</h1>
+					<h3>A revolução do Google está chegando</h3>
+				</hgroup>
+				<figure>
+					<img id="icone" src="imagens/especificacoes.png" alt="especificacoes" />
+				</figure>
+				<nav id="menu">
+					<h3>Menu Principal</h3>
+					<ul>
+						<li onmouseover="mudafoto('imagens/home.png')" onmouseout="mudafoto('imagens/especificacoes.png')"><a href="index.html">Home</a></li>
+						<li onmouseover="mudafoto('imagens/especificacoes.png')" onmouseout="mudafoto('imagens/especificacoes.png')"><a href="specs.html">Especificações</a></li>
+						<li onmouseover="mudafoto('imagens/fotos.png')" onmouseout="mudafoto('imagens/especificacoes.png')"><a href="fotos.html">Fotos</a></li>
+						<li onmouseover="mudafoto('imagens/multimidia.png')" onmouseout="mudafoto('imagens/especificacoes.png')"><a href="multimidia.html">Multimídia</a></li>
+						<li onmouseover="mudafoto('imagens/contato.png')" onmouseout="mudafoto('imagens/especificacoes.png')"><a href="fale-conosco.html">Fale conosco</a></li>
+					</ul>
+				</nav>
+			</header>
+			<section id="corpoCompleto">
+				<article id="noticiaPrincipal">
+					<header id="cabecalhoArtigo">
+						<hgroup>
+							<h4>Glass > Especificações</h4>
+							<h2>Raio-X no Google Glass</h2>
+							<h3>por Uelton Lima</h3>
+							<h4 class="direita">Atualizado em 01/Maio/2013</h4>
+						</hgroup>
+					</header>
+					<p>Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.</p>
+					<section id="conteudo">
+						<figure>
+							<img src="imagens/glass-esquema-marcado.jpg" usemap="#meuMapa" alt="Áreas marcadas em vermelho exibem mais detalhes do Google Glass" />
+							<map name="meuMapa">
+								<area shape="poly" coords="181,218,265,206,267,242,183,255" href="google-glass.html#tela" target="janela" alt="Exibe artigo de tela" />
+								<area shape="circle" coords="157,243,11" href="google-glass.html#camera" target="janela" alt="Exibe artigo sobre a camera">
+								<area shape="poly" coords="26,141,82,215,83,253,82,252,26,168" href="google-glass.html#sensores" target="janela" alt="Exibe artigo sobre os sensores" />
+								<area shape="circle" coords="75,51,11" href="google-glass.html#gadgets" target="janela" alt="Exibe artigo sobre a bateria" />
+							</map>
+							<iframe id="frame-spec"src="google-glass.html" name="janela" scrolling="no">
+							</iframe>
+						</figure>
+					</section>
+				</article>
+			</section>
+			<footer id="rodape">
+				<p>Copyright 2013 - by Uelton Lima <br/>
 				<a href="https://facebook.com/uelton.17" target="_blank">Facebook</a> |
 				<a href="https://twitter.com/UeltonSL" target="_blank"> Twitter</a></p>
 			</footer>
 		</div>
 	</body>
-	</html>
+</html>
