--- a/multimidia.html
+++ b/multimidia.html
@@ -1,52 +1,75 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-	<!-- Configurações de comportamento da pagina-->
-	<meta charset="utf-8"/>
-	<meta name="author" content="Uelton lima">
-	<link rel="stylesheet" href="css/estilo.css">
-	<title>Google Glass</title>
-	<script src="javascript/funcoes.js"></script>
-</head>
-<body>
-	<div id="interface">
-		<header id="cabecalho">
-			<hgroup>
-				<h1>Google Glass</h1>
-				<h3>A revolução do Google está chegando</h3>
-			</hgroup>
-			<figure>
-				<img id="icone" src="imagens/multimidia.png" alt="multimidia"/>
-			</figure>
-			<nav id="menu">
-				<h3>Menu Principal</h3>
-				<ul>
-					<li onmouseover="mudafoto('imagens/home.png')" onmouseout="mudafoto('imagens/multimidia.png')"><a href="index.html">Home</a></li>
-					<li onmouseover="mudafoto('imagens/especificacoes.png')" onmouseout="mudafoto('imagens/multimidia.png')"><a href="specs.html">Especificações</a></li>
-					<li onmouseover="mudafoto('imagens/fotos.png')" onmouseout="mudafoto('imagens/multimidia.png')"><a href="fotos.html">Fotos</a></li>
-					<li onmouseover="mudafoto('imagens/multimidia.png')" onmouseout="mudafoto('imagens/multimidia.png')"><a href="multimidia.html">Multimídia</a></li>
-					<li onmouseover="mudafoto('imagens/contato.png')" onmouseout="mudafoto('imagens/multimidia.png')"><a href="fale-conosco.html">Fale conosco</a></li>
-				</ul>
-			</nav>
-		</header>
-
-Glass > Multimídia
-Sons e Vídeos
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
-
-
-Áudio e Vídeo
-
-[AQUI ENTRA UM VÍDEO]
-[AQUI ENTRA UM ÁUDIO]
-
-<footer id="rodape">
-
-			<p>Copyright 2013 - by Uelton Lima <br/>
+	<head>
+		<!-- Configurações de comportamento da pagina-->
+		<meta charset="utf-8"/>
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="keywords" content="Google, Glass, Especificações, GPS, Óculos, Tecnologia" />
+		<meta name="description" content="a revolução do Google Glass para otimizar nossa vida." />
+		<meta name="author" content="Uelton lima" />
+		<link rel="stylesheet" href="css/estilo.css" />
+		<link rel="stylesheet" href="css/media.css" />
+		<title>Google Glass</title>
+		<script src="javascript/funcoes.js"></script>
+	</head>
+	<body>
+		<div id="interface">
+			<header id="cabecalho">
+				<hgroup>
+					<h1>Google Glass</h1>
+					<h3>A revolução do Google está chegando</h3>
+				</hgroup>
+				<figure>
+					<img id="icone" src="imagens/multimidia.png" alt="multimidia"/>
+				</figure>
+				<nav id="menu">
+					<h3>Menu Principal</h3>
+					<ul>
+						<li onmouseover="mudafoto('imagens/home.png')" onmouseout="mudafoto('imagens/multimidia.png')"><a href="index.html">Home</a></li>
+						<li onmouseover="mudafoto('imagens/especificacoes.png')" onmouseout="mudafoto('imagens/multimidia.png')"><a href="specs.html">Especificações</a></li>
+						<li onmouseover="mudafoto('imagens/fotos.png')" onmouseout="mudafoto('imagens/multimidia.png')"><a href="fotos.html">Fotos</a></li>
+						<li onmouseover="mudafoto('imagens/multimidia.png')" onmouseout="mudafoto('imagens/multimidia.png')"><a href="multimidia.html">Multimídia</a></li>
+						<li onmouseover="mudafoto('imagens/contato.png')" onmouseout="mudafoto('imagens/multimidia.png')"><a href="fale-conosco.html">Fale conosco</a></li>
+					</ul>
+				</nav>
+			</header>
+			<section id="corpoCompleto">
+				<article id="noticiaPrincipal">
+					<header id="cabecalhoArtigo">
+						<hgroup>
+							<h4>Glass > Multimídia</h4>
+							<h2>Sons e Vídeos</h2>
+							<h3>por Uelton Lima</h3>
+							<h4 class="direita">Atualizado em 01/Maio/2013</h4>
+						</hgroup>
+					</header>
+					<div id="tvAudio">
+						<audio id="musica" controls="controls" >
+							<source src="media/2009-lovers-carvings-bibio.mp3" type="audio/mpeg" />
+							<source src="media/2009-lovers-carvings-bibio.aac" type="audio/x-aac" />
+							<source src="media/2009-lovers-carvings-bibio.ogg" type="audio/ogg" />
+							<source src="media/2009-lovers-carvings-bibio.wav" type="audio/wav" />
+							Desculpe, mas não foi possível carregar o audio!
+						</audio>
+						<video id="filme03" controls="controls" poster="imagens/video-mini03.jpg">
+							<source src="media/one-day.mp4" type="video/mp4" />
+							<source src="media/one-day.webm" type="video/webm" />
+							<source src="media/one-day.ogg" type="video/ogg" />
+							Desculpe, mas não foi possível carregar o vídeo!
+						</video>
+					</div>
+					<!--
+						Caso meu site fique muito pesado vou substituir os videos locais por web!
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/4EvNxWhskf8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					-->
+				</article>
+			</section>
+			<footer id="rodape">
+				<p>Copyright 2013 - by Uelton Lima <br/>
 				<a href="https://facebook.com/uelton.17" target="_blank">Facebook</a> |
 				<a href="https://twitter.com/UeltonSL" target="_blank"> Twitter</a></p>
 			</footer>
 		</div>
 	</body>
-	</html>
+</html>
