--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -131,7 +131,7 @@
                             </label></p>
                         </fieldset>
 
-                        <input type="image" name="btn-formEnviar" src="imagens/botao-enviar.png" value="" />
+                        <input type="image" name="btn-formEnviar" src="imagens/botao-enviar.png" alt="imagem" />
                     </form>
                 </article>
             </section>
