--- a/specs.html
+++ b/specs.html
@@ -9,7 +9,7 @@
 		<meta name="description" content="a revolução do Google Glass para otimizar nossa vida." />
 		<meta name="author" content="Uelton lima" />
 		<link rel="stylesheet" href="css/estilo.css">
-		<link rel="stylesheet" type="text/css" href="css/specs.css" />
+		<link rel="stylesheet" href="css/specs.css" />
 		<script src="javascript/funcoes.js"></script>
 		<title>Google Glass</title>
 	</head>
@@ -54,7 +54,7 @@
 								<area shape="poly" coords="26,141,82,215,83,253,82,252,26,168" href="google-glass.html#sensores" target="janela" alt="Exibe artigo sobre os sensores" />
 								<area shape="circle" coords="75,51,11" href="google-glass.html#gadgets" target="janela" alt="Exibe artigo sobre a bateria" />
 							</map>
-							<iframe id="frame-spec"src="google-glass.html" name="janela" scrolling="no">
+							<iframe id="frame-spec" src="google-glass.html" name="janela">
 							</iframe>
 						</figure>
 					</section>
