--- a/google-glass.html
+++ b/google-glass.html
@@ -13,11 +13,15 @@
 			body {
 				font-family: sans-serif;
 				font-size: 10pt;
-			}			
+				overflow-x: hidden;
+				overflow-y: hidden;
+			}
+
 			p {
 				text-align: justify;
 				text-indent: 20px;
 			}
+
 			article {
 				margin-bottom: 800px;
 			}
