--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 							<h4 class="direita">Atualizado em 23/Abril/2013</h4>
 						</hgroup>
 					</header>
-					<h3 style="text-align:center">O que é</h3>
+					<h3>O que é</h3>
 					<p>O <a href="http://glass.google.com" target="_blank" style="font-weight:bolder">Google Glass</a> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de Project Glass, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeo&shy;conferê&shy;ncias. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o <a href="http://glass.google.com" target="_blank">Google Glass</a> encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
 					<figure class="fotoLegenda">
 						<img src="imagens/glass-quadro-homem-mulher.jpg" alt="glass-quadro-homem-mulher">
